--- a/public/css/weather-buddy.css
+++ b/public/css/weather-buddy.css
@@ -61,7 +61,7 @@ body {
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-	background-color: #4c4c4c;
+	background-color: transparent;
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
@@ -70,6 +70,9 @@ body {
 @media (max-width: 767px) {
 	.navbar-inverse {
 		background-color: #fff;
+	}
+	.navbar-inverse .navbar-brand {
+		font-size: 1.625rem;
 	}
 	.navbar-inverse .navbar-nav > li > a,
 	.navbar-inverse .navbar-nav > .open > a,
@@ -93,6 +96,9 @@ body {
 #navbar-mobile a {
 	font-size: 1.125rem;
 	font-weight: normal;
+}
+#navbar-mobile .glyphicon {
+	font-size: 1rem;
 }
 #navbar-mobile .user-name {
 	padding: 10px 15px;
@@ -243,30 +249,29 @@ body {
 		display: none;
 	}
 	.welcome {
-		font-size: 1.375rem;
-		margin: 30px 0 8px;
+		font-size: 1.25rem;
+		margin: 20px 0 3px;
 	}
 	.important-info {
-		font-size: 1.5rem;
-		margin: 8px 0;
+		font-size: 1.25rem;
+		margin: 3px 0;
 	}
 	.important-info .glyphicon {
-		font-size: 1.25rem;
-		margin-left: 8px;
+		font-size: 1rem;
+		margin-left: 3px;
 	}
 	.additional-info {
-		font-size: 1.25rem;
-		margin: 8px 0;
+		font-size: 1.125rem;
+		margin: 3px 0;
 	}
 	.additional-info .glyphicon {
 		font-size: 1rem;
-		margin-left: 8px;
+		margin-left: 5px;
 	}
 	.weather-details {
 		margin: 30px 0 10px;
 	}
 }
-
 
 .weather-icon {
 	height: 25px;
