--- a/public/css/weather-buddy.css
+++ b/public/css/weather-buddy.css
@@ -206,6 +206,12 @@ body {
 .location {
 	color: #fff;
 	font-size: 1.125rem;
+	float: left;
+}
+.share {
+	float: right;
+	color: #fff;
+	font-size: 1.125rem;
 }
 .main-link {
 	color: #fff;
@@ -225,13 +231,12 @@ body {
 .welcome {
 	color: #fff;
 	font-size: 2rem;
-	margin: 40px 0 10px;
+	margin: 30px 0 0;
 }
 .important-info {
 	color: #fff;
 	font-size: 2.25rem;
 	font-weight: bold;
-	margin: 10px 0;
 }
 .important-info .glyphicon {
 	font-size: 1.5rem;
@@ -241,18 +246,49 @@ body {
 .additional-info {
 	color: #fff;
 	font-size: 1.625rem;
-	margin: 10px 0;
 }
 .additional-info .glyphicon {
 	font-size: 1.125rem;
 	display: inline-block;
 	margin-left: 10px;
 }
+.weather-tabs {
+	margin-top: 60px;
+	border-bottom: none;
+}
+.weather-tabs > li.active > a,
+.weather-tabs > li.active > a:hover,
+.weather-tabs > li.active > a:focus {
+	color: #4c4c4c;
+	background-image: url("../img/transparent.png");
+	background-repeat: repeat;
+	background-position: left top;
+	background-color: transparent;
+	border: 1px solid #fff;
+}
 .weather-details {
 	margin: 60px 0 20px;
 }
+.weather-details.today {
+	margin-top: 0;
+}
 .weather-details .table {
 	margin-bottom: 0;
+}
+.today-details > tbody > tr > td {
+	border-top: none;
+	border-left: 1px solid #fff;
+	padding: 8px 8px;
+}
+.today-details > tbody > tr > td.no-border {
+	border-left: none;
+}
+.today-details .temperature-row {
+	font-size: 1.125rem;
+	font-weight: bold;
+}
+.today-details .temperature-row td {
+	padding-top: 5px;
 }
 @media (max-width: 767px) {
 	.main-link {
@@ -260,11 +296,10 @@ body {
 	}
 	.welcome {
 		font-size: 1.25rem;
-		margin: 20px 0 3px;
+		margin: 20px 0 0;
 	}
 	.important-info {
 		font-size: 1.25rem;
-		margin: 3px 0;
 	}
 	.important-info .glyphicon {
 		font-size: 1rem;
@@ -272,7 +307,6 @@ body {
 	}
 	.additional-info {
 		font-size: 1.125rem;
-		margin: 3px 0;
 	}
 	.additional-info .glyphicon {
 		font-size: 1rem;
@@ -306,4 +340,9 @@ body {
 }
 .weather-icon.storm {
 	background-image: url("../img/weather/storm.png");
+}
+.today-details .weather-icon {
+	height: 38px;
+	width: 38px;
+	margin: 0 auto;
 }
