Changing background and transparency based on feedback.

--- a/public/css/weather-buddy.css
+++ b/public/css/weather-buddy.css
@@ -13,7 +13,7 @@ body {
 	background-image: url("../img/bg.png");
 	background-repeat: repeat-x;
 	background-position: left top;
-	background-color: #fff096;
+	background-color: #d8e3a2;
 	font-family: "Delius","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 1rem;
 	color: #4c4c4c;
